# coding-agents-databricks-apps

./: install_databricks_cli.sh  install_gh.sh  install_micro.sh  pyproject.toml  requirements.txt  setup_claude.py  setup_hermes.py
