[project]
name = "coda"
version = "0.18.1"
description = "CoDA - Coding Agents on Databricks Apps"
requires-python = ">=3.10"
dependencies = [
    "flask>=2.0",
    "flask-socketio>=5.0",
    "simple-websocket>=1.0",
    "claude-agent-sdk",
    "databricks-sdk>=0.20.0",
    "mlflow-skinny==3.11.1",
    "requests",
    "cryptography>=46.0.7",
]

[tool.uv]
# Exclude packages uploaded to PyPI more recently than ~30 days ago.
# This gives the community time to catch supply-chain issues before they land here.
# Bump this date when you intentionally need a newer release.
exclude-newer = "7 days"
